--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/name"
             android:layout_weight="0.07" />
 
         <TextView
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/editText3" />
+            android:id="@+id/email" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:inputType="phone"
             android:ems="10"
-            android:id="@+id/editText4" />
+            android:id="@+id/mobile" />
 
         <TextView
             android:layout_width="match_parent"
@@ -105,24 +105,13 @@
 
         <Button
             android:id="@+id/sign_up"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:onClick="register"
             android:text="Sign Up"
             android:textColor="#fbfbff"
             android:background="#4991ff" />
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/signInButton"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:textSize="17sp"
-        android:onClick="showLogin"
-        android:text="Already Have an account ? Log in!"
-        android:background="#4d94ff"
-        android:textColor="#f7f8ff" />
 
 </LinearLayout>
