--- a/app/src/main/res/menu/menu_categories.xml
+++ b/app/src/main/res/menu/menu_categories.xml
@@ -1,13 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="njerry.freshbox.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools" tools:context="njerry.freshbox.Categories">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_logout"
-        android:orderInCategory="100"
-        app:showAsAction="never"
-        android:title="Log out"/>
-
 </menu>
