--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".RegisterActivity"
+    tools:context=".Register"
     android:background="#efedff">
 
     <LinearLayout
@@ -21,35 +21,28 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="First &amp; Last Name"
-            android:id="@+id/textView"
-            android:textSize="20dp" />
+            android:id="@+id/textView" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/name"
-            android:layout_weight="0.07" />
+            android:id="@+id/name" />
 
         <TextView
             android:id="@+id/error_messages"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textColor="@android:color/holo_red_dark"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textColor="@android:color/holo_red_dark" />
 
         <TextView
-            android:layout_width="63dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Email"
-            android:id="@+id/textView3"
-            android:textSize="20dp"
-            android:layout_weight="0.11" />
+            android:id="@+id/textView3" />
 
         <EditText
             android:layout_width="match_parent"
@@ -61,10 +54,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Mobile Number"
-            android:id="@+id/textView4"
-            android:textSize="20dp" />
+            android:id="@+id/textView4" />
 
         <EditText
             android:layout_width="match_parent"
@@ -76,9 +67,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Username"
-            android:textColor="#010101"
-            android:textSize="20dp" />
+            android:text="Username" />
 
         <EditText
             android:id="@+id/register_username"
@@ -92,9 +81,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Password"
-            android:textColor="#010101"
-            android:textSize="20dp" />
+            android:text="Password" />
 
         <EditText
             android:id="@+id/register_password"
