--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,8 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Register"
-    android:background="#efedff">
+    tools:context=".Register">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +29,7 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/name" />
+        <requestFocus />
 
         <TextView
             android:id="@+id/error_messages"
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text" >
-            <requestFocus />
+
         </EditText>
 
         <TextView
