--- a/app/src/main/res/menu/menu_extras.xml
+++ b/app/src/main/res/menu/menu_extras.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="njerry.freshbox.Extras">
+    xmlns:tools="http://schemas.android.com/tools" tools:context="njerry.freshbox.ExtrasMain">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
